# ghostty-blackhole-main

./: .gitignore  CHANGES.md  CMakeLists.txt  README.md  WGC_vs_DXGI.md  blackhole_debug.txt  blackhole_presets.txt  build_blackhole.ps1
.github/workflows/: build.yml
src/: gui_config.cpp  main.cpp  win32_gl.cpp
tuner/: Package.swift  make-app.sh
tuner/Sources/BlackHoleTuner/: ContentView.swift  TunerApp.swift
